tests/pass/infer-lambda-do.mle
type unit = Unit

eff gen [a] = yield : a => unit

val f : forall [a] . (<gen a>{unit}) -> a

let infer = f { do yield () }
